# RedLilium

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build_web.bat  build_web.sh  project.toml  run_web.bat  run_web.sh
app/: Cargo.toml
app/src/: app.rs  args.rs  context.rs  handler.rs  input.rs  lib.rs
core/: Cargo.toml  README.md
core/benches/: core_benchmarks.rs
core/src/: input.rs  lib.rs  math.rs  pool.rs  profiling.rs
core/src/abstract_editor/: action.rs  action_queue.rs  history.rs  mod.rs
core/src/compute/: cancellation.rs  io_handle.rs  mod.rs  mutex.rs  rwlock.rs  yield_now.rs
core/src/gltf/: error.rs  exporter.rs  gltf_overview.md  loader.rs  mod.rs  types.rs  vertex.rs
core/src/gltf/tests/: load_test.rs  mod.rs  roundtrip_test.rs
core/src/material/: mod.rs  types.rs
core/src/mesh/: data.rs  generators.rs  layout.rs  mod.rs
core/src/sampler/: mod.rs  types.rs
core/src/scene/: mod.rs  types.rs
core/src/texture/: mod.rs  types.rs
debug_drawer/: Cargo.toml
debug_drawer/src/: draw_api.rs  drawer.rs  lib.rs  renderer.rs  shader.rs  vertex.rs
demos/: Cargo.toml  README.md
demos/examples/: window_test.rs
demos/shaders/: deferred_gbuffer.glsl  deferred_gbuffer.slang  deferred_gbuffer.wgsl  deferred_resolve.glsl  deferred_resolve.slang  deferred_resolve.wgsl  pbr_ibl.glsl  pbr_ibl.wgsl  skybox.glsl  skybox.slang  skybox.wgsl
demos/src/: lib.rs
demos/web/: index.html
ecs/: Cargo.toml  DESIGN.md
ecs-std/: Cargo.toml
ecs-std/src/: hierarchy.rs  lib.rs  spawn.rs
ecs-std/src/components/: camera.rs  hierarchy.rs  light.rs  mesh.rs  mod.rs  name.rs  transform.rs  visibility.rs
ecs-std/src/physics/: components2d.rs  components3d.rs  conversions.rs  mod.rs  physics2d.rs  physics3d.rs
ecs-std/src/systems/: camera.rs  mod.rs  transform.rs
ecs-std/src/ui/: component_inspector.rs  mod.rs  registry.rs  world_inspector.rs
ecs-std/tests/: integration.rs  reflection.rs
ecs/benches/: ecs_benchmarks.rs
ecs/docs/: access-control.md  async-compute.md  bundles.md  commands.md  component-storage.md  cross-platform.md  entities.md  events.md  hierarchy.md  io-runtime.md  physics.md  queries-and-filters.md  reflection-and-inspector.md  resources.md  runners.md  scene-spawning.md  scheduling.md  standard-components.md  systems.md  transform-system.md  world.md
ecs/docs/missing/: archetype-storage.md  component-lifecycle-hooks.md  dynamic-components.md  exclusive-systems.md  observers-and-hooks.md  one-shot-systems.md  parallel-iteration.md  plugin-system.md  prefabs.md  query-caching.md  query-combinators.md  serialization.md  state-machines.md  thread-local-resources.md
ecs/docs/missing/done/: system-piping.md
ecs/docs/partial/: bundles.md  reflection.md  relations.md  system-sets-and-stages.md
ecs/src/: access.rs  access_set.rs  bundle.rs  command_collector.rs  commands.rs  component.rs  component_field.rs  compute.rs  compute_context.rs  condition.rs  diagnostics.rs  entity.rs  events.rs  function_system.rs  hierarchy.rs  inspect.rs  io_handle.rs  io_runtime.rs  lib.rs  lock_request.rs  main_thread_dispatcher.rs  main_thread_resource.rs  map_entities.rs  observer.rs  par_for_each.rs  prefab.rs  priority.rs  query.rs  query_access.rs  query_guard.rs  reactive.rs  resource.rs  runner.rs  runner_multi.rs  runner_single.rs  schedule.rs  sparse_set.rs  spawn.rs  state.rs  string_table.rs  (+9 more)
ecs/src/components/: camera.rs  collision.rs  disabled.rs  hierarchy.rs  light.rs  material.rs  mod.rs  render_mesh.rs  transform.rs
ecs/src/physics/: components2d.rs  components3d.rs  conversions.rs  physics2d.rs  physics3d.rs
ecs/src/rendering/: components.rs  material_inspector.rs  mod.rs  resources.rs  systems.rs
ecs/src/rendering/shaders/: entity_index.rs  mod.rs  opaque_color.rs
ecs/src/runner/: mod.rs
ecs/src/runner/multi/: mod.rs
ecs/src/runner/single/: mod.rs
ecs/src/serialize/: context.rs  error.rs  field.rs  format.rs  mod.rs  prefab_io.rs  value.rs
ecs/src/std/: hierarchy.rs  mod.rs  spawn.rs
ecs/src/std/components/: camera.rs  disabled.rs  free_fly_camera.rs  grid.rs  hierarchy.rs  light.rs  mod.rs  name.rs  orbit_camera.rs  transform.rs  visibility.rs  window_input.rs
ecs/src/std/physics/: components2d.rs  components3d.rs  mod.rs  systems2d.rs  systems3d.rs  world2d.rs  world3d.rs
ecs/src/std/rendering/: material_inspector.rs  mod.rs
ecs/src/std/systems/: camera.rs  free_fly_camera.rs  grid.rs  mod.rs  orbit_camera.rs  selection_aabb.rs  (+1 more)
ecs/src/systems/: camera.rs  mod.rs  transform.rs  transform_propagation.rs
ecs/src/ui/: component_inspector.rs  mod.rs  world_inspector.rs
ecs/tests/: integration.rs  reflection.rs
editor/: Cargo.toml
editor/src/: asset_browser.rs  background_vfs.rs  console.rs  dock.rs  editor.rs  fs_watcher.rs  history_panel.rs  log_capture.rs  main.rs  menu.rs  project.rs  scene_view.rs  status_bar.rs  theme.rs  toolbar.rs
graphics/: Cargo.toml  README.md
graphics/benches/: graphics_benchmarks.rs
graphics/src/: device.rs  error.rs  instance.rs  lib.rs  profiling.rs  resize.rs  swapchain.rs
graphics/src/backend/: dummy.rs  error.rs  mod.rs  wgpu_backend.rs
graphics/src/compiler/: mod.rs
graphics/src/egui/: controller.rs  input.rs  mod.rs  renderer.rs
graphics/src/graph/: mod.rs  pass.rs  resource.rs  resource_usage.rs  target.rs  transfer.rs
graphics/src/materials/: bindings.rs  instance.rs  material.rs  mod.rs
graphics/src/mesh/: data.rs  layout.rs  mod.rs
graphics/src/pipeline/: mod.rs
graphics/src/resources/: buffer.rs  mod.rs  ring_buffer.rs  sampler.rs  texture.rs
graphics/src/scene/: camera_system.rs  extracted.rs  mod.rs  render_world.rs  scene_renderer.rs
graphics/src/scheduler/: mod.rs  sync.rs
graphics/src/shader/: library.rs  mod.rs  slang_compiler.rs
graphics/src/types/: buffer.rs  common.rs  mod.rs  sampler.rs  texture.rs
graphics/tests/: gpu_tests.rs  window_test.rs
graphics/tests/common/: mod.rs
vfs/: Cargo.toml
vfs/src/: error.rs  filesystem.rs  lib.rs  memory.rs  path.rs  poll.rs  provider.rs  sftp.rs  vfs.rs
(+119 files in other folders)
