[workspace]
resolver = "2"
members = [
    "core",
    "ecs",
    "graphics",
    "app",
    "demos",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/IvanPleshkov/RedLilium"

[workspace.dependencies]
# Window and input handling
winit = "0.30.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bitflags = "2.10"
static_assertions = "1.1"

# Web support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Testing
rstest = "0.26.1"

# GPU backends
wgpu = "28.0.0"
ash = "0.38.0"
gpu-allocator = "0.28"
parking_lot = "0.12"
pollster = "0.4"
naga = { version = "24.0", features = ["wgsl-in", "wgsl-out", "spv-out"] }
naga_oil = "0.17"

# Math and data
glam = "0.30"
bytemuck = { version = "1.21", features = ["derive"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
