[workspace]
resolver = "2"
members = [
    "core",
    "ecs",
    "ecs-macro",
    "graphics",
    "app",
    "demos",
    "editor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/IvanPleshkov/RedLilium"

[workspace.dependencies]
# Window and input handling
winit = "0.30.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bitflags = "2.10"
fixedbitset = "0.5"
static_assertions = "1.1"

# Web support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Testing
rstest = "0.26.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# GPU backends
wgpu = "28.0.0"
ash = "0.38.0"
gpu-allocator = "0.28"
parking_lot = "0.12"
pollster = "0.4"
naga = { version = "24.0", features = ["wgsl-in", "wgsl-out", "spv-out"] }
naga_oil = "0.17"

# Math and data
bytemuck = { version = "1.21", features = ["derive"] }

# UI
egui = "0.33.3"

# glTF loading
gltf-dep = { package = "gltf", version = "1.4.1" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Physics
nalgebra = { version = "0.33", features = ["convert-bytemuck"] }
rapier3d = "0.32"
rapier3d-f64 = { package = "rapier3d-f64", version = "0.32" }
rapier2d = "0.32"
rapier2d-f64 = { package = "rapier2d-f64", version = "0.32" }

# Async IO runtime
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# Profiling (optional)
tracy-client = "0.18"
