[package]
name = "redlilium-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Application framework for RedLilium Engine"

[features]
default = []
profiling = ["redlilium-core/profiling", "redlilium-graphics/profiling"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redlilium-core = { path = "../core" }
redlilium-graphics = { path = "../graphics" }

# Window and input handling
winit = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
parking_lot = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
pollster = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
