[package]
name = "redlilium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core crate for RedLilium Engine"

[features]
default = []
profiling = ["dep:tracy-client"]

[dependencies]
log.workspace = true
bytemuck = { workspace = true }

# Profiling (optional)
tracy-client = { workspace = true, optional = true }
