[package]
name = "redlilium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core crate for RedLilium Engine"

[features]
default = ["gltf"]
profiling = ["dep:tracy-client"]
gltf = ["dep:gltf-dep", "dep:image"]
physics-math = []
physics-f32 = []

[dependencies]
log.workspace = true
bytemuck = { workspace = true }
nalgebra = { workspace = true }

# glTF loading (optional, enabled by default)
gltf-dep = { workspace = true, optional = true }
image = { workspace = true, optional = true }

# Profiling (optional)
tracy-client = { workspace = true, optional = true }
