[package]
name = "redlilium-debug-drawer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Debug drawing utilities for RedLilium Engine"

[dependencies]
redlilium-graphics = { path = "../graphics" }
bytemuck = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
