[package]
name = "redlilium-demos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo scenes showcasing RedLilium Engine capabilities"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redlilium-core = { path = "../core" }
redlilium-ecs = { path = "../ecs" }
redlilium-graphics = { path = "../graphics" }
winit.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "Element"] }

[[bin]]
name = "window_demo"
path = "src/bin/window_demo.rs"
