[package]
name = "redlilium-demos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo scenes showcasing RedLilium Engine capabilities"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redlilium-core = { path = "../core" }
redlilium-ecs = { path = "../ecs" }
redlilium-graphics = { path = "../graphics" }
redlilium-app = { path = "../app" }
winit.workspace = true
log.workspace = true
bytemuck = { workspace = true }
glam = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
# For PBR IBL demo - HDR texture loading
image = { version = "0.25", default-features = false, features = ["hdr", "png"] }
ureq = "2.10"
half = { version = "2.4", features = ["bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "Element"] }

[[bin]]
name = "window_demo"
path = "src/bin/window_demo.rs"

[[bin]]
name = "pbr_ibl_demo"
path = "src/bin/pbr_ibl_demo.rs"

[[bin]]
name = "textured_quad_demo"
path = "src/bin/textured_quad_demo.rs"

[[example]]
name = "window_test"
path = "examples/window_test.rs"
