[package]
name = "ecs-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard ECS components and systems for RedLilium Engine"

[features]
default = []
profiling = ["redlilium-core/profiling", "redlilium-ecs/profiling"]

[dependencies]
redlilium-core = { path = "../core" }
redlilium-ecs = { path = "../ecs" }
glam = { workspace = true }
log.workspace = true
