[package]
name = "ecs-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard ECS components and systems for RedLilium Engine"

[features]
default = []
profiling = ["redlilium-core/profiling", "redlilium-ecs/profiling"]
physics-3d = ["dep:rapier3d-f64", "redlilium-core/physics-math"]
physics-3d-f32 = ["dep:rapier3d", "redlilium-core/physics-math", "redlilium-core/physics-f32"]
physics-2d = ["dep:rapier2d-f64", "redlilium-core/physics-math"]
physics-2d-f32 = ["dep:rapier2d", "redlilium-core/physics-math", "redlilium-core/physics-f32"]
physics = ["physics-3d", "physics-2d"]
inspector = []

[dependencies]
redlilium-core = { path = "../core" }
redlilium-ecs = { path = "../ecs" }
bytemuck = { workspace = true }
log.workspace = true

# Physics (optional)
rapier3d-f64 = { workspace = true, optional = true }
rapier3d = { workspace = true, optional = true }
rapier2d-f64 = { workspace = true, optional = true }
rapier2d = { workspace = true, optional = true }

# Inspector UI (via redlilium-ecs re-export)
egui.workspace = true
