[package]
name = "redlilium-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ECS components and systems for RedLilium Engine"

[features]
default = []
profiling = ["redlilium-core/profiling"]

[dependencies]
redlilium-core = { path = "../core" }
log.workspace = true
bevy_ecs = { version = "0.18.0", default-features = false }
glam = "0.31"
