[package]
name = "redlilium-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Custom ECS with async compute support for RedLilium Engine"

[features]
default = []
profiling = ["redlilium-core/profiling"]

[dependencies]
redlilium-core = { path = "../core" }
ecs-macro = { path = "../ecs-macro" }
bytemuck = { workspace = true }
log.workspace = true
