[package]
name = "redlilium-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Editor application for RedLilium Engine"

[dependencies]
redlilium-core = { path = "../core" }
redlilium-ecs = { path = "../ecs", features = ["inspector", "rendering"] }
redlilium-graphics = { path = "../graphics" }
redlilium-app = { path = "../app" }
redlilium-debug-drawer = { path = "../debug_drawer" }

log = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"
