[package]
name = "redlilium-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RedLilium engine graphics"

[features]
default = ["dummy", "wgpu-backend", "vulkan-backend"]
dummy = []
wgpu-backend = ["dep:wgpu", "dep:pollster"]
vulkan-backend = ["dep:ash", "dep:ash-window", "dep:gpu-allocator", "dep:parking_lot", "dep:naga"]

[dependencies]
log.workspace = true
bitflags.workspace = true
static_assertions.workspace = true
glam = "0.31"
winit = "0.30"
raw-window-handle = "0.6"

# Shader composition
naga_oil.workspace = true

# Optional GPU backend dependencies
wgpu = { workspace = true, optional = true }
ash = { workspace = true, optional = true }
ash-window = { version = "0.13", optional = true }
gpu-allocator = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
naga = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
pollster.workspace = true
env_logger.workspace = true
