[package]
name = "redlilium-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RedLilium engine graphics"

[features]
default = ["dummy", "wgpu-backend", "vulkan-backend"]
dummy = []
wgpu-backend = ["dep:wgpu", "dep:pollster"]
vulkan-backend = ["dep:ash", "dep:ash-window", "dep:gpu-allocator", "dep:parking_lot"]
profiling = ["dep:tracy-client", "redlilium-core/profiling"]

[dependencies]
redlilium-core = { path = "../core" }
log.workspace = true
bitflags.workspace = true
static_assertions.workspace = true
winit = "0.30"
raw-window-handle = "0.6"
bytemuck = { version = "1.18", features = ["derive"] }

# Shader parsing and composition
naga.workspace = true

# UI
egui = "0.33.3"

# Clipboard (desktop only, not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"

# Optional GPU backend dependencies
wgpu = { workspace = true, optional = true }
ash = { workspace = true, optional = true }
ash-window = { version = "0.13", optional = true }
gpu-allocator = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# Profiling (optional)
tracy-client = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
pollster.workspace = true
env_logger.workspace = true
criterion = { workspace = true }

[[bench]]
name = "graphics_benchmarks"
harness = false
